fixed overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,9 @@ $text-colors:(
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
+
 
 @mixin flex($justify:space-between){
     display: flex;
@@ -35,6 +37,7 @@ html{
 
 .App{
     background: map-get($primary-colors, "deepest");
+    overflow-x: hidden;
 }
 
 .section-width,header{
@@ -45,7 +48,6 @@ html{
     color:map-get($text-colors, "light");
 }
 .hero-bg{
-    // background-image: url("/background-img/Background.svg");
     background-color: #12163b;
     background-position: center;
     background-size: cover;
@@ -87,7 +89,7 @@ header{
             a{
                 text-decoration:none;
                 padding:0 0.5rem;
-                font-size: 0.85rem;
+                font-size: 1rem;
                 color: map-get($text-colors, "light");
 
                 &:hover{
@@ -143,7 +145,7 @@ header{
     padding:7rem 0 15rem 0;
     h2{
         padding: 3rem 0;
-        font-size: 2.8rem;
+        font-size: 2.9rem;
     }
     button{
         border-radius: 20px;
@@ -170,10 +172,10 @@ header{
     }
 }
 .store-section{
-    padding:4.5rem 0;
+    padding:10rem 0;
     h2{
         text-align:center;
-        font-size: 1.6rem;
+        font-size: 1.7rem;
     }
     .store-advantages{
         padding:4rem 0;
@@ -205,12 +207,16 @@ header{
     text-align: center;
 
     h2{
-        padding:1rem 0;
+        padding:2rem 0;
+        font-size: 1.7rem;
+    }
+    .p{
+        font-size: 1.2rem;
     }
     .billing{
         @include flex(center);
         column-gap: 0.8rem;
-        padding:1rem 0;
+        padding:2rem 0;
         button{
             border-radius: 20px;
             padding: 0.4rem 1rem;
@@ -265,15 +271,19 @@ header{
     }
 }
 .Experience{
-    padding:5rem 0;
+    padding:10rem 0;
     position: relative;
+    .position-quote{
+        position: relative;
+    }
     .exp-header{
         @include flex(flex-start);
         column-gap: 2rem;
         text-align: center;
         h2{
-            font-size:1.5rem;
+            font-size:1.6rem;
             line-height: 1.5;
+            flex-basis: 80%;
         }
     }
     .customer-reviews{
@@ -299,7 +309,7 @@ header{
             }
             .reviewers-text{
                 display: flex;
-                font-size: 0.75rem;
+                font-size: 0.85rem;
                 line-height: 2;
                 .quote-svg{
                     width: 40px;
@@ -317,7 +327,7 @@ header{
     .ending-quote{
         position: absolute;
         right:0rem;
-        bottom:3rem;
+        bottom:-5rem;
     }
 }
 .mobile-app-section{
@@ -328,7 +338,7 @@ header{
             width:90%;
             margin:0 auto;
             background: map-get($primary-colors, "deeper");
-            padding:2rem 1.8rem;
+            padding:5rem 1.8rem;
             border-radius:15px;
             .app-text{
                 width: 45%;
@@ -336,10 +346,10 @@ header{
                 flex-direction: column;
                 row-gap:2rem;
                 h2{
-                    font-size: 1.8rem;
+                    font-size: 1.75rem;
                 }
                 p{
-                    font-size: 1rem;
+                    font-size: 1.2rem;
                 }
                 span{
                     a{
@@ -422,14 +432,18 @@ footer{
             column-gap: 1rem;
             .media-icons-container{
                 border-radius: 50%;
-                width: 25px;
-                height: 25px;
+                width: 30px;
+                height: 30px;
                 background-color: rgba(#fff, 0.2);
                 opacity:0.5;
-                @include flex(center);
-                .media-icon{
-                    color:white;
-                    font-size: 1.1rem;
+                a{
+                    width: 100%;
+                    height: 100%;
+                    @include flex(center);
+                    .media-icon{
+                        color:white;
+                        font-size: 1.1rem;
+                    }
                 }
                 &:hover{
                     transform: scale(1.5);
@@ -446,6 +460,13 @@ footer{
         margin:0 auto;
     }
     header{
+        ul{
+            li{
+                a{
+                    font-size: 0.85rem;
+                }
+            }
+        }
         .begin{
             .login{
                 background: #fff;
@@ -462,7 +483,7 @@ footer{
     }
     .hero-content{
         h2{
-            font-size: 2.5rem;
+            font-size: 2.3rem;
         }
         button{
             a{
@@ -472,7 +493,7 @@ footer{
     }
     .store-section{
         h2{
-            font-size: 1.5rem;
+            font-size: 1.3rem;
         }
         .store-advantages{
             .advantage{
@@ -492,20 +513,32 @@ footer{
         }
     }
     .plan-section{
+        h2{
+            padding-top:0;
+            font-size: 1.2rem;
+        }
+        .p{
+            font-size: 1rem;
+        }
         .billing{
+            p{
+                font-size: 0.9rem;
+            }
             button{
-                font-size: 0.8rem;
+                font-size: 0.65rem;
             }
         }
     }
     .Experience{
         .exp-header{
             h2{
-                font-size:2rem;
+                font-size:1.5rem;
                 margin-left: 3rem;
+                flex-basis: 65%;
             }
         }
         .customer-reviews{
+            padding:1rem 0;
             .review{
                 padding:2rem;
                 .reviewers-text{
@@ -523,10 +556,14 @@ footer{
                     width: 40%;
                     line-height: 1.5;
                     h2{
-                        font-size: 1.7rem;
+                        font-size: 1.3rem;
+                    }
+                    p{
+                        font-size: 1rem;
                     }
                     span{
                         a{
+                            font-size: 0.9rem;
                             span{
                                 margin-left: 0.5rem;
                             }
